Add participant responses to API spec
